<resources>
    <string name="app_name">MyDemo</string>
    <string name="intent_test">intent test</string>
    <string name="intent_text">Intent text</string>
    <string name="implicit_intent_test">implicit intent test</string>
    <string name="explicit_intent_test">explicit intent test</string>
    <string name="this_is_explicit_intent">this is explicit intent</string>
    <string name="this_is_implicit_intent">this is implicit intent</string>
    <string name="intent_service">intent service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_fragment_news">I am fragment news</string>
    <string name="hello_world_hello_world_hello_world_hello_world_hello_world">Hello world! Hello world! Hello world! Hello world! Hello world!</string>
    <string name="xiaomi_account_center">Xiaomi Account Center</string>
    <string name="xiaomi_account">Xiaomi Account</string>
    <string name="fragment">fragment</string>
    <string name="xiaomi_account_helper_center">小米账号帮助中心</string>
    <string name="please_enter_keyword">please enter keyword</string>
    <string name="self_service">自助服务</string>
    <string name="more">更多</string>
    <string name="help_center">帮助中心</string>
    <string name="item_text">Item Text</string>
    <string name="close">关闭</string>
</resources>