<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.xiaomi.XiaomiAccountCenterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/light_gray"
                    />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:backgroundTint="@color/light_gray"
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/myImageView"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_help_24"
                    android:layout_marginEnd="30dp"
                    android:layout_alignParentEnd="true"
                />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/xiaomi_account_helper_center"
            android:layout_marginTop="20dp"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_keyword"
            android:padding="12dp"
            android:drawablePadding="16dp"
            android:layout_margin="30dp"
            android:drawableLeft="@drawable/baseline_search_24"
            android:background="@drawable/rounded_gray_edittext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_service"
            android:textColor="@color/light_gray"
            style="@style/xiaomi_account_left_margin"
            />

<!--        <GridLayout-->
<!--            android:id="@+id/gridLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:columnCount="3"-->
<!--            android:layout_margin="30dp"-->
<!--            android:layout_gravity="center">-->

<!--            <ImageView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_columnWeight="1"-->
<!--                android:src="@drawable/baseline_search_24"-->
<!--                android:scaleType="centerCrop"/>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_center"
                android:textColor="@color/light_gray"
                style="@style/xiaomi_account_left_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:layout_marginRight="30dp"
                android:gravity="end"
                android:textColor="@color/text_color_selector"
                style="@style/xiaomi_account_left_margin"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabSelectedTextColor="@color/blue"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                app:tabIndicator="@drawable/tab_indicator"
                android:background="@android:color/transparent"
                app:tabBackground="@drawable/tab_selector">
                <!-- 添加Tab项 -->
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_below="@id/tabLayout"/>

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>